--- a/08SemanaBasedeDatos_070621.ipynb
+++ b/08SemanaBasedeDatos_070621.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DELETE FROM `employees` WHERE emp_no=9999 "
+    "DELETE FROM `employees` WHERE emp_no = 9999 "
    ]
   },
   {
@@ -201,7 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SELECT d.dept_name ,AVG(s.salary) PROMEDIO_SALARIO_DEPARTAMENTO FROM salaries s INNER JOIN dept_emp de ON s.emp_no = e.emp_no INNER JOIN departments d ON de.dept_no = d.dept_no GROUP BY  d.dept_name"
+    "SELECT d.dept_name ,AVG(s.salary) PROM_SALARIO_DEPTO FROM salaries s INNER JOIN dept_emp de ON s.emp_no = e.emp_no INNER JOIN departments d ON de.dept_no = d.dept_no GROUP BY  d.dept_name\n",
+    "    \n"
    ]
   },
   {
@@ -219,25 +220,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imports\n",
-    "import pandas as pd\n",
+    "# importo librerias\n",
+    "!pip install pymongo # sin esto no andaba\n",
     "import pymongo\n",
     "import csv\n",
     "\n",
-    "#Conexion MongoDB\n",
-    "client = pymongo.MongoClient('localhost',27017)\n",
-    "db = client['weatherHistory']\n",
-    "#Coleccion\n",
+    "# hago conexion a MDB\n",
+    "client = pymongo.MongoClient(\"mongodb://localhost:27017/\")\n",
+    "db = client[\"weatherHistory\"]\n",
+    "\n",
+    "# genero coleccion\n",
     "collection = db['weatherHistory']\n",
     "\n",
-    "#Function to parse csv to dictionary\n",
-    "reader = csv.DictReader(open('weatherHistory.csv'))\n",
-    "for row in reader:\n",
-    "    key = row.pop('Formatted Date')\n",
-    "    collection.insert_one(row)\n",
-    " \n",
-    "print(collection)\n",
-    "# Final insert statement"
+    "# levanto datos del .csv\n",
+    "datos = csv.DictReader(open(\"C:\\\\Users\\\\User\\\\Desktop\\\\weatherHistory.csv\"))\n",
+    "\n",
+    "# subo datos a Mdb\n",
+    "for fila in datos:\n",
+    "    collection.insert_one(fila)"
    ]
   },
   {
@@ -247,6 +247,15 @@
     "### 10mo Ejercicio\n",
     "\n",
     "Compartir el código en en Python que devuelva la cantidad de registros insertados en la colección anterior.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.collection.count()"
    ]
   },
   {
